--- a/index.html
+++ b/index.html
@@ -2,9 +2,12 @@
 <html lang="en">
   <head>
     <link rel="stylesheet" href="style.css" />
-    <title>My Website</title>
+    <title>Ondullah's Website</title>
   </head>
   <body>
-    <h1>Hello World!</h1>
+    <div class = "hero">
+
+    </div>
+    <script src="script.js"></script>
   </body>
 </html>
