css and html connected

--- a/index.html
+++ b/index.html
@@ -5,9 +5,16 @@
     <title>Ondullah's Website</title>
   </head>
   <body>
-    <div class = "hero">
+      <nav class ="navbar" >
+        <ul>
+          <li><a href="#">HOME</a></li>
+          <li><a href="#">ABOUT ME</a></li>
+          <li><a href="#">PROJECTS</a></li>
+          <li><a href="#">CONTACT ME</a></li>
+        </ul>
+      </nav>
 
-    </div>
+    
     <script src="script.js"></script>
   </body>
 </html>
