Updated html and css files

--- a/index.html
+++ b/index.html
@@ -5,16 +5,30 @@
     <title>Ondullah's Website</title>
   </head>
   <body>
-      <nav class ="navbar" >
-        <ul>
-          <li><a href="#">HOME</a></li>
-          <li><a href="#">ABOUT ME</a></li>
-          <li><a href="#">PROJECTS</a></li>
-          <li><a href="#">CONTACT ME</a></li>
-        </ul>
-      </nav>
-
-    
-    <script src="script.js"></script>
+      <!-----header section------>
+      <div class="header">
+        <nav>
+          <div class="navbar">
+            <ul>
+              <li><a href="#">Home</a></li>
+              <li><a href="#">About Me</a></li>
+              <li><a href="#">Projects</a></li>
+              <li><a href="#">My Contact</a></li>
+            </ul>
+          </div>
+        </nav>
+        <div class="left-sidebar"></div>
+        <div class="row">
+          <div class="left-col">
+          <img src="../Ondullah-Website/images/felix-removebg-preview.jpg">
+        </div>
+        <div class="right-col">
+          <h1>I am Felix Ondullah <br> A Software Developer </h1>
+          <br><br>
+       <p>I have 2 months experience in html and CSS. I have been able
+          to work on various projects for diffrenet client wordlwide. </p>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
