--- a/index.html
+++ b/index.html
@@ -25,10 +25,52 @@
         <div class="right-col">
           <h1>I am Felix Ondullah <br> A Software Developer </h1>
           <br><br>
-       <p>I have 2 months experience in html and CSS. I have been able
-          to work on various projects for diffrenet client wordlwide. </p>
+       <p>I have 8 months experience in html and CSS. I have been able
+          to work on various projects during this period. </p>
         </div>
       </div>
     </div>
+    <!--Project section-->
+    <section id="Projects">
+      <h2 class="heading">Projects</h2>
+      <div class="Pictures">
+        <img src="../Ondullah-Website/images/austin-distel-pfmKvWLDGoc-unsplash.jpg" alt="Uber App">
+        <img src="../Ondullah-Website/images/mobile-phone-gc64964c1c_1920.jpg" alt="Taxfy App">
+        <img src="../Ondullah-Website/images/niclas-illg-FJ5e_2f96h4-unsplash.jpg" alt="Rent App">
+        <img src="../Ondullah-Website/images/stock-gfca7eec11_1920.jpg" alt="Forex App">
+
+      </div>
+    </section>
+    <!--About me-->
+    <section id="About">
+      <h1 class="heading">About Me</h1>
+      <div class="columns">
+        <div class="box">
+          <h2>Bachelors Degree</h2>
+      
+          <P>Bachelors in Infromation Sciences</P>
+        </div>
+        <div class="box">
+          <h2>Language Skills</h2>
+          <P><ul>
+            <li>Python</li>
+            <li>Java</li>
+            <li>JavaScript</li>
+          </ul></P>
+        </div>
+
+      </div>
+    </section>
+    <section id="Contact">
+      <h1 class="heading">Contact Me</h1>
+      <form action="" class="form">
+        <input type="text" name="name" class="input" placeholder="Enter your name">
+        <input type="email" name="email" class="input" placeholder="Enter your email">
+        <textarea name="message" id="message" cols="70" rows="20" placeholder="Enter your Message"> </textarea>
+        <input type="Sumbit" value="Sumbit" id="Sumbit">
+
+      </form>
+
+    </section>
   </body>
 </html>
