added realtive links

--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
         <nav>
           <div class="navbar">
             <ul>
-              <li><a href="#">Home</a></li>
-              <li><a href="#">About Me</a></li>
-              <li><a href="#">Projects</a></li>
-              <li><a href="#">My Contact</a></li>
+              <li><a href="#home">Home</a></li>
+              <li><a href="#About">About Me</a></li>
+              <li><a href="#Projects">Projects</a></li>
+              <li><a href="#Contact">My Contact</a></li>
             </ul>
           </div>
         </nav>
@@ -66,8 +66,8 @@
       <form action="" class="form">
         <input type="text" name="name" class="input" placeholder="Enter your name">
         <input type="email" name="email" class="input" placeholder="Enter your email">
-        <textarea name="message" id="message" cols="70" rows="20" placeholder="Enter your Message"> </textarea>
-        <input type="Sumbit" value="Sumbit" id="Sumbit">
+        <textarea name="message" id="message" cols="70" rows="20" placeholder="Enter your message"> </textarea>
+        <input type="submit" value="submit" id="submit">
 
       </form>
 
