added js and its events

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Ondullah's Website</title>
   </head>
   <body>
+    <script src="script.js"></script>
       <!-----header section------>
       
         <nav>
@@ -20,7 +21,8 @@
         <div class="left-sidebar"></div>
         <div class="row">
           <div class="left-col">
-          <img src="../Ondullah-Website/images/felix-removebg-preview.jpg">
+          <img src="../Ondullah-Website/images/felix-removebg-preview-removebg-preview.png" id="image" onmouseover="newPicture()" onmouseout="oldPicture()">
+
         </div>
         <div class="right-col">
           <h1>I am Felix Ondullah <br> A Software Developer </h1>
@@ -34,10 +36,10 @@
     <section id="Projects">
       <h2 class="heading">Projects</h2>
       <div class="Pictures">
-        <img src="../Ondullah-Website/images/austin-distel-pfmKvWLDGoc-unsplash.jpg" alt="Uber App">
-        <img src="../Ondullah-Website/images/mobile-phone-gc64964c1c_1920.jpg" alt="Taxfy App">
-        <img src="../Ondullah-Website/images/niclas-illg-FJ5e_2f96h4-unsplash.jpg" alt="Rent App">
-        <img src="../Ondullah-Website/images/stock-gfca7eec11_1920.jpg" alt="Forex App">
+        <img src="../Ondullah-Website/images/austin-distel-pfmKvWLDGoc-unsplash.jpg">
+        <img src="../Ondullah-Website/images/mobile-phone-gc64964c1c_1920.jpg">
+        <img src="../Ondullah-Website/images/niclas-illg-FJ5e_2f96h4-unsplash.jpg">
+        <img src="../Ondullah-Website/images/stock-gfca7eec11_1920.jpg" >
 
       </div>
     </section>
@@ -47,15 +49,23 @@
       <div class="columns">
         <div class="box">
           <h2>Bachelors Degree</h2>
-      
-          <P>Bachelors in Infromation Sciences</P>
+  
+          <P>Bachelors in Information Sciences</P>
         </div>
         <div class="box">
-          <h2>Language Skills</h2>
+          <h2> Coding Language Skills</h2>
           <P><ul>
             <li>Python</li>
             <li>Java</li>
             <li>JavaScript</li>
+          </ul></P>
+        </div>
+        <div class="box">
+          <h2>Hobbies</h2>
+          <P><ul>
+            <li>Travelling</li>
+            <li>Reading</li>
+            <li>Writing</li>
           </ul></P>
         </div>
 
